--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,9 +1,11 @@
 ---
 
+shell_profile: "{{ ((ansible_user_shell | basename) == 'bash') | ternary(bash_profile, zsh_profile) }}"
+
+config_dir: "{{ xdg_config_home}}/{{ ansible_user_shell | basename }}"
+
 install_state: present
 configuration_state: present
-
-dotstrap_config_dir: "{{ ansible_user_dir }}/.config/dotstrap"
 
 z_cmd: j
 
