--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,5 +1,13 @@
 ---
 
+ansible_user_shell_name: "{{ ansible_user_shell | basename }}"
+
+bash_profile: "{{ ansible_user_dir }}/.bash_profile"
+zsh_profile: "{{ ansible_user_dir }}/.zshrc"
+
+default_xdg_config_home: "{{ ansible_user_dir }}/.config"
+xdg_config_home: "{{ ansible_env.XDG_CONFIG_HOME | default(default_xdg_config_home) }}"
+
 default_xdg_data_home: "{{ ansible_user_dir }}/.local/share"
 xdg_data_home: "{{ ansible_env.XDG_DATA_HOME | default(default_xdg_data_home) }}"
 
