--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,15 +1,38 @@
 ---
 
-shell_profile: "{{ ((ansible_user_shell | basename) == 'bash') | ternary(bash_profile, zsh_profile) }}"
+#####=== global defaults ===#####
 
-config_dir: "{{ xdg_config_home}}/{{ ansible_user_shell | basename }}"
+# These defaults are in many of mkwmms' roles; override them to prevent neeeding
+# to override the corresponding role default for each role individually.
 
-install_state: present
-configuration_state: present
+# Shell startup file where settings are written to.
+# This role uses the value of this variable if it is defined.
+# default:
+#   - bash: ~/.bash_profile
+#   - zsh: ~/.zshrc
+#   - fish: ~/.config/fish/config.fish
+# shell_config_file
+
+# Directory where shell inititialization files are installed to.
+# This role uses the value of this variable if it is defined.
+# default:
+#   - bash: ($XDG_DATA_HOME | ~/.local/share)/bash/
+#   - zsh: ($XDG_DATA_HOME | ~/.local/share)/zsh/
+#   - fish: ~/.config/fish/
+# shell_data_dir
+
+configure_state: present
+
+#####=== z defaults ===#####
 
 z_cmd: j
 
-z_marker: "#####=== {mark} Ansible managed z settings ===#####"
+z_data_file: "{{ xdg_data_home }}/z/z_data"
 
-# TODO: should the z db file default to $XDG_DATA_HOME or $XDG_CACHE_HOME?
-z_data_path: "{{ xdg_data_home }}/z/z_data"
+# The state in which settings are written to z_config_file via the blockinfile module.
+# choices: [ present, absent ]
+z_configure_state: "{{ configure_state }}"
+
+# The marker line (which surrounds the text block) template.
+# "{mark}" will be replaced with "BEGIN" or "END".
+z_marker: "#####=== {mark} Ansible managed z-prompt settings ===#####"
