Add verbose output to ansible-playbook in travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,10 +25,10 @@ script:
   # Basic role syntax check
   - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
   # Run the role
-  - ansible-playbook tests/test.yml -i tests/inventory --connection=local
+  - ansible-playbook tests/test.yml -i tests/inventory --connection=local -vv
   # Run the role again, checking to make sure it's idempotent
   - >
-    ansible-playbook tests/test.yml -i tests/inventory --connection=local
+    ansible-playbook tests/test.yml -i tests/inventory --connection=local -vv
     | grep -q 'changed=0.*failed=0'
     && (echo 'Idempotence test: pass' && exit 0)
     || (echo 'Idempotence test: fail' && exit 1)
