--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,10 @@ script:
   # Basic role syntax check
   - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
   # Run the role
-  - ansible-playbook tests/test.yml -i tests/inventory --connection=local -vv
+  - ansible-playbook tests/test.yml -i tests/inventory --connection=local -vvv
+  - cat $HOME/.bash_profile
   # Do a simple check to see if we wrote the correct settings
-  - grep -E '^source.*\.config/bash/z/z.sh"$' $HOME/.bash_profile
+  # - grep -E '^source.*\.config/bash/z/z.sh"$' $HOME/.bash_profile
   # Run the role again, checking to make sure it's idempotent
   - >
     ansible-playbook tests/test.yml -i tests/inventory --connection=local
